test/reg050/expected
badbangop.idr:16:1:When elaborating right hand side of opUse:
When elaborating an application of function Prelude.Monad.>>=:
        Can't unify
                List Integer
        with
                argTy -> retTy
        
        Specifically:
                Can't unify
                        List
                with
                        \{uv0} => argTy -> uv
./baddoublebang.idr:6:28: error: unexpected
    Operator without known fixity:
    !!, expected: space
doubleBang mmn = do pure !!mmn 
                           ^   
